--- a/src/Coevery.Web/Core/Relationships/Views/EditorTemplates/Fields/Reference.Edit.cshtml
+++ b/src/Coevery.Web/Core/Relationships/Views/EditorTemplates/Fields/Reference.Edit.cshtml
@@ -5,31 +5,31 @@
 @{
     var settings = Model.Field.PartFieldDefinition.Settings.GetModel<ReferenceFieldSettings>();
     var required = settings.Required ? "required" : null;
-    var selectAttributes = new Dictionary<string, object> { { "class", "textMedium span12" } };
-    if (settings.Required)
-    {
+    var selectAttributes = new Dictionary<string, object> {{"class", "textMedium span12"}};
+    if (settings.Required) {
         selectAttributes.Add("required", "");
     }
 
-    if (!string.IsNullOrWhiteSpace(settings.HelpText))
-    {
+    if (!string.IsNullOrWhiteSpace(settings.HelpText)) {
         selectAttributes.Add("help-text", settings.HelpText);
     }
 }
 <label class="span3 control-label @required" for="@Html.FieldIdFor(m => m.ContentId)">@Model.Field.DisplayName</label>
 <div class="control controls errortips">
     @Html.HiddenFor(m => m.ContentId)<span id="@Html.IdFor(m=>m.SelectedText)">@Model.SelectedText</span>
-    @*@Html.DropDownListFor(m => m.ContentId, Model.ItemList, string.Empty, selectAttributes)*@
     <a data-toggle="modal" data-backdrop="static"
        data-reference-model="toggle" 
        data-display-field="@settings.DisplayFieldName"
-       data-modal-url="@Url.Action("Index", "EntityPicker", new { area = "Relationships"})" 
-       class="btn" href="#">@T("Select...")</a>
-
+       data-modal-url="@Url.Action("Index", "EntityPicker",  new { 
+                           area = "Relationships", 
+                           relatedEntityName=Model.RelatedEntityDefinition.Name, 
+                           fieldName = Model.Field.Name,
+                           relatedEntityArea = ViewContext.RouteData.DataTokens["area"]
+                  })" class="btn" href="#">@T("Select...")</a>
     <div class="modal hide" tabindex="-1">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-            <h3>Please a Lead</h3>
+            <h3>@T("Choose {0}", Model.RelatedEntityDefinition.DisplayName)</h3>
         </div>
         <div class="modal-body">
             <iframe width="100%" height="380px" frameborder="0" scrolling="yes" allowtransparency="true"></iframe>
@@ -54,7 +54,7 @@
                 e.preventDefault();
                 var baseUrl = $this.data("modal-url");
                 var callbackName = "_entitypicker_" + new Date().getTime();
-                $target.find('iframe').attr('src', baseUrl + '?callback=' + callbackName);
+                $target.find('iframe').attr('src', baseUrl + '&callback=' + callbackName);
                 $[callbackName] = function(returnData) {
                     $this.data('result', returnData);
                 };
