--- a/src/Coevery.Web/DeveloperTools/FormDesigner/Views/Admin/Index.cshtml
+++ b/src/Coevery.Web/DeveloperTools/FormDesigner/Views/Admin/Index.cshtml
@@ -16,7 +16,7 @@
                 <button type="button" class="btn btn-small" ng-click="exit()">Back</button>
                 <button class="btn btn-primary btn-small" data-cobusy="'saveform'" data-ng-click="save()">Save</button>
                 <button class="btn btn-primary btn-small" data-cobusy="'saveform'" data-ng-click="saveAndBack()">Save & Back</button>
-                <button class="btn btn-small">Reset</button>
+                @*<button class="btn btn-small">Reset</button>*@
             </div>
         </div>
     </div>
