--- a/src/Coevery.Web/Core/Relationships/Views/EditorTemplates/Fields/Reference.Edit.cshtml
+++ b/src/Coevery.Web/Core/Relationships/Views/EditorTemplates/Fields/Reference.Edit.cshtml
@@ -36,8 +36,8 @@
             <iframe width="100%" height="380px" frameborder="0" scrolling="yes" allowtransparency="true"></iframe>
         </div>
         <div class="modal-footer">
-            <button type="button" data-dismiss="modal" class="btn">Cancel</button>
-            <button type="button" class="btn btn-primary btn-ok">OK</button>
+            <button type="button" class="btn btn-primary btn-ok">@T("OK")</button>
+            <button type="button" data-dismiss="modal" class="btn">@T("Cancel")</button>
         </div>
     </div>
 </div>
