fix unique value issues

--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Boolean.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Boolean.Edit.cshtml
@@ -32,5 +32,5 @@
             </div>
                                                                                                        break;
     }
-    @Html.ValidationMessageFor(m => m.Value)
+    @Html.ValidationMessageFor(m => m, null, new { @class = "error" })
 </div>
