--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/MultilineText.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/MultilineText.Edit.cshtml
@@ -19,5 +19,5 @@
         @if (!string.IsNullOrWhiteSpace(settings.HelpText)) {
             <text>help-text='@settings.HelpText'</text>
         } >@Model.Value</textarea>
-    @Html.ValidationMessageFor(m => m.Value)
+    @Html.ValidationMessageFor(m => m, null, new { @class = "error" })
 </div>
