--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Phone.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Phone.Edit.cshtml
@@ -16,5 +16,5 @@
            class="textMedium span12 phonenumber" 
         @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>help-text='@settings.HelpText'</text> } 
         />
-    @Html.ValidationMessageFor(m => m.Value)
+    @Html.ValidationMessageFor(m => m, null, new { @class = "error" })
 </div>
