--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Url.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Url.Edit.cshtml
@@ -16,6 +16,6 @@
            class="textMedium span12 url" 
         @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>help-text='@settings.HelpText'</text> } 
         />
-    @Html.ValidationMessageFor(m => m.Value)
+    @Html.ValidationMessageFor(m => m, null, new { @class = "error" })
 </div>
 
