--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Currency.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Currency.Edit.cshtml
@@ -16,6 +16,6 @@
         {<text> required data-msg-required="Please fill this field!"</text> } 
         @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>help-text='@settings.HelpText'</text> }
         />
-    @Html.ValidationMessageFor(m => m.Value)
+    @Html.ValidationMessageFor(m => m, null, new { @class = "error" })
 </div>
 
