--- a/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Text.Edit.cshtml
+++ b/src/Coevery.Web/Core/Fields/Views/EditorTemplates/Fields/Text.Edit.cshtml
@@ -10,5 +10,5 @@
 <div class="control controls errortips">
     <input class="span12"  type="text" id="@Html.FieldIdFor(m => m.Value)" name="@Html.FieldNameFor(m => m.Value)" value="@Model.Value" @if (required != null) {<text>required data-msg-required="This field is required."</text>} @if (settings.MaxLength > 1) {<text> maxlength="@settings.MaxLength"</text>} placeholder="@settings.PlaceHolderText" 
         @if (!string.IsNullOrWhiteSpace(settings.HelpText)){<text>help-text='@settings.HelpText'</text> }  />
-    @Html.ValidationMessageFor(m => m.Value)
+    @Html.ValidationMessageFor(m => m, null, new{ @class= "error"})
 </div>
