--- a/src/Coevery.Web/Themes/Mooncake/Views/MooncakeResource.cshtml
+++ b/src/Coevery.Web/Themes/Mooncake/Views/MooncakeResource.cshtml
@@ -34,6 +34,10 @@
     Style.Include("layout.css");
     Style.Include("site.css");
 
+    //pnotify
+    Script.Require("pnotify");
+    Style.Require("pnotify");
+    
     Script.Include("js/setup.js");
     Script.Include("js/bootstrap-modalmanager.js");
     Script.Include("js/bootstrap-modal.js");
