--- a/src/Coevery.Web/Core/Relationships/Views/DefinitionTemplates/ReferenceFieldSettings.cshtml
+++ b/src/Coevery.Web/Core/Relationships/Views/DefinitionTemplates/ReferenceFieldSettings.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Web.Mvc.Html
+@using Coevery.Core.Relationships.Settings
 @using Coevery.Mvc.Html
 @using Newtonsoft.Json
 @model Coevery.Core.Relationships.Settings.ReferenceFieldSettings
@@ -33,6 +34,18 @@
     </label>
     <div class="controls errortips">
         <input type="text" class="span12" required="" name="@Html.NameFor(m => m.RelationshipName)" value="@Model.RelationshipName" @disabled />
+    </div>
+</section>
+<section class="control-group data-row">
+    <label class="control-label required">
+        @T("What to do if the referenced record is deleted?")
+    </label>
+    <div class="controls errortips">
+        <select id="@Html.FieldIdFor(m => m.DeleteAction)" name="@Html.FieldNameFor(m => m.DeleteAction)" class="span12" required="">
+            @Html.SelectOption(Model.DeleteAction, DeleteAction.NotAllowed, T("Don’t allow deletion of the referenced record").Text)
+            @Html.SelectOption(Model.DeleteAction, DeleteAction.Clear, T("Clear the value of this field").Text)
+            @Html.SelectOption(Model.DeleteAction, DeleteAction.Cascade, T("Delete this record also").Text)
+        </select>
     </div>
 </section>
 <section class="control-group data-row">
