--- a/src/Coevery.Web/Modules/Coevery.Users/Views/EditorTemplates/Parts/User.Edit.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.Users/Views/EditorTemplates/Parts/User.Edit.cshtml
@@ -1,11 +1,20 @@
 ﻿@model Coevery.Users.ViewModels.UserEditViewModel
 <fieldset>
-    @Html.LabelFor(m => m.UserName, T("User Name"))
-    @Html.TextBoxFor(m=>m.UserName, new { @class = "text medium" })
-    @Html.ValidationMessageFor(m=>m.UserName, "*")
-</fieldset>
-<fieldset>
-    @Html.LabelFor(m => m.Email, T("Email"))
-    @Html.TextBoxFor(m=>m.Email, new { @class = "text medium" })
-    @Html.ValidationMessageFor(m=>m.Email, "*")
+    <legend>@T("General Information")</legend>
+    <div class="data-row clearfix">
+        <div class="span12 control-group">
+            @Html.LabelFor(m => m.UserName, T("User Name").Text, new { @class = "title control-label required" })
+            <div class="control controls errortips">
+                <input class="span12" type="text" id="@Html.IdFor(m => m.UserName)" name="@Html.NameFor(m => m.UserName)" required="" data-msg-required="This field is required." maxlength="100" value="@Model.UserName" placeholder="">
+            </div>
+        </div>
+    </div>
+    <div class="data-row clearfix">
+        <div class="span12 control-group">
+            @Html.LabelFor(m => m.Email, T("Email").Text, new { @class = "title control-label required" })
+            <div class="control controls errortips">
+                <input class="span12" type="text" id="@Html.IdFor(m => m.Email)" name="@Html.NameFor(m => m.Email)" required="" data-msg-required="This field is required." maxlength="100" value="@Model.Email" placeholder="">
+            </div>
+        </div>
+    </div>
 </fieldset>
